[build-system]
requires = ["briefcase>=0.3.15"]

[tool.briefcase]
project_name = "YouTube Downloader"
bundle = "org.example"
version = "0.0.1"
url = "https://github.com/yourusername/youtube-downloader-android"
license = "MIT"
author = "Your Name"
author_email = "your.email@example.com"
description = "Simple YouTube video downloader for Android"

[tool.briefcase.app.youtubedownloader]
formal_name = "YouTube Downloader"
description = "Download YouTube videos easily"
long_description = """A simple and intuitive YouTube video downloader for Android devices."""
sources = ["src/youtubedownloader"]
test_sources = ["tests"]

requires = [
    "toga-android>=0.3.1",
]

test_requires = [
    "pytest",
]

[tool.briefcase.app.youtubedownloader.android]
requires = [
    "toga-android>=0.3.1",
]

# Android specific settings
android.target_api = 33
android.min_api = 21
android.build_gradle_dependencies = []
android.gradle_dependencies = []
android.java_version = "11"

# Permissions
android.permission.INTERNET = "Internet access for downloading videos"
android.permission.WRITE_EXTERNAL_STORAGE = "Storage access for saving videos"
android.permission.READ_EXTERNAL_STORAGE = "Storage access for reading videos"
